--- a/views/admin/index.twig
+++ b/views/admin/index.twig
@@ -1,1 +1,18 @@
-<form action="organizations" method="post"><input name="name"></form>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <title>Wibbo</title>
+<body>
+<div id="content"></div>
+
+<script src="//code.jquery.com/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+<script type="text/jsx" src="/js/components.js"></script>
+
+</body>
+</html>
+
