--- a/views/admin/index.twig
+++ b/views/admin/index.twig
@@ -33,7 +33,7 @@
 
 <script src="//code.jquery.com/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
 <script type="text/jsx" src="/js/components.js"></script>
 
