--- a/views/homepage.twig
+++ b/views/homepage.twig
@@ -8,13 +8,7 @@
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Wibbo administration</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/admin">Wibbo administration</a>
+            <a class="navbar-brand" href="/">Wibbo</a>
         </div>
     </div>
 </nav>
@@ -32,7 +26,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
 <script type="text/jsx" src="/js/components.js"></script>
 <script type="text/jsx">
-    React.render(<OrganizationBox withForm="true" />, document.getElementById('content'));
+    React.render(<OrganizationBox withForm="false" />, document.getElementById('content'));
 </script>
 
 </body>
