--- a/views/admin/index.twig
+++ b/views/admin/index.twig
@@ -32,7 +32,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
 <script type="text/jsx" src="/js/components.js"></script>
 <script type="text/jsx">
-    React.render(<OrganizationBox withForm="true" />, document.getElementById('content'));
+    React.render(<OrganizationBox readOnly="true" />, document.getElementById('content'));
 </script>
 
 </body>
