--- a/views/homepage.twig
+++ b/views/homepage.twig
@@ -26,7 +26,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
 <script type="text/jsx" src="/js/components.js"></script>
 <script type="text/jsx">
-    React.render(<OrganizationBox withForm="false" />, document.getElementById('content'));
+    React.render(<OrganizationBox readOnly="false" />, document.getElementById('content'));
 </script>
 
 </body>
