--- a/views/layout.twig
+++ b/views/layout.twig
@@ -3,18 +3,12 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <title>Wibbo</title>
+    <title>{% block title %}{% endblock %}</title>
 <body>
 <nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Wibbo administration</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/admin">Wibbo administration</a>
+            <a class="navbar-brand" href="/">{{ block('title') }}</a>
         </div>
     </div>
 </nav>
@@ -32,9 +26,8 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
 <script type="text/jsx" src="/js/components.js"></script>
 <script type="text/jsx">
-    React.render(<OrganizationBox readOnly="false" />, document.getElementById('content'));
+    {% block jsx %} {% endblock %}
 </script>
 
 </body>
 </html>
-
